see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

18-Jan-2011 Jean-Marie Simonet
 # Correcting code typo
 # [#24327] Bluestork administrator template template.css typo. Thanks Bill.
 # [#24428] breadcrumbs doesn't look good on rtl templates
 # [#24461] Langswitcher module needed display improvement parameters
 $ [#24466] Incomplete language strings in Mass Mail. Thanks Mark.
 # [#24460] uppear right toolbar on rtl template isn't align well. Thanks Ofer.
 $ [#24448] missing translation for COM_WEBLINKS_DEFAULT_PAGE_TITLE. Thanks Bill.

17-Jan-2011 Jean-Marie Simonet
 + Adding he.gif flag to langswitcher
 # [#24426] Missing language string JLIB_INSTALLER_ABORT_PACK_INSTALLER_COPY_SETUP. Thanks Bill.
 # [#24409] RTL/LTR issues in Beez2 and 5 (News feeds and debug)
 
16-Jan-2011 Jean-Marie Simonet
 # [#24391] Implementing RTL pagination in beez
 # [#23083] Internationalisation of sample data options list. Thanks Christophe.

15-Jan-2011 Jean-Marie Simonet
 $ Correcting lang string typo
 #$ [#24384] Missing Language string Cache Unwritable
 # [#24396] MODULES_ERR_XML incorrectly called. Thanks Michael
 
14-Jan-2011 Jean-Marie Simonet
 $ Correcting lang string typo
 # [#24377] Adding a "Location" column in Language Manager
 
13-Jan-2011 Jean-Marie Simonet
 + Adding pt_br.gif flag for langswitcher
 $ [#24328] Inconsistent term for User Group. Thanks Mark.
 # [#24299] Issue with MySQL compatibility in joomla.sql with params fields. Thanks Sam.
 $ Adding missing string in JLIB

12-Jan-2011 Jean-Marie Simonet
 $ Correcting errors in fa-IR, aa-AA and he-IL installation langs
 # Correction in credits & site en-GB.xml