@@ -556,7 +556,7 @@
 		<field name="show_state_headings"
 			type="radio"
 			default="0"
-			label="JGLOBAL_STATE"
+			label="COM_CONTACT_FIELD_CONFIG_STATE_LABEL"
 			description="COM_CONTACT_FIELD_CONFIG_STATE_DESC"
 		>
 			
