@@ -62,7 +62,8 @@ COM_CONTACT_FIELD_CONFIG_REDIRECT_DESC="Enter an alternative email address, wher
 COM_CONTACT_FIELD_CONFIG_REDIRECT_LABEL="Contact Redirect"
 COM_CONTACT_FIELD_CONFIG_SESSION_CHECK_DESC="Check for the existence of session cookie.This means that users without cookies enabled will not be able to send emails."
 COM_CONTACT_FIELD_CONFIG_SESSION_CHECK_LABEL="Session Check"
-COM_CONTACT_FIELD_CONFIG_STATE_DESC="Show/Hide a State column in the list of Contacts."
+COM_CONTACT_FIELD_CONFIG_STATE_LABEL="State or County"
+COM_CONTACT_FIELD_CONFIG_STATE_DESC="Show/Hide a State or County column in the list of Contacts."
 COM_CONTACT_FIELD_CONFIG_SUBURB_DESC="Show/Hide a City or Suburb column in the list of Contacts."
 COM_CONTACT_FIELD_CONFIG_SUBURB_LABEL="City or Suburb"
 COM_CONTACT_FIELD_CONFIG_TABLE_OF_CONTACTS_DESC="These settings apply for Contact List Options unless they are changed for a specific menu item."
